--- a/Angular/app/Layouts/public-layout.component.html
+++ b/Angular/app/Layouts/public-layout.component.html
@@ -7,3 +7,21 @@
     </div>
   </a>
 </div>
+
+<h3>Categories</h3>
+<div class="grid grid-pad">
+  <a *ngFor="let category of categories" class="col-1-4">
+    <div >
+      <h4>{{category.name}}</h4>
+    </div>
+  </a>
+</div>
+
+<h3>Prices</h3>
+<div class="grid grid-pad">
+  <a *ngFor="let price of prices" class="col-1-4">
+    <div >
+      <h4>{{price.name}}</h4>
+    </div>
+  </a>
+</div>
