--- a/Angular/app/Layouts/public-layout.component.html
+++ b/Angular/app/Layouts/public-layout.component.html
@@ -1,4 +1,6 @@
 <!--component html goes here -->
+<public-header></public-header>
+
 <h3>Brands</h3>
 <div class="grid grid-pad">
   <a *ngFor="let brand of brands" class="col-1-4">
