--- a/Angular/app/Headers/public-header.component.html
+++ b/Angular/app/Headers/public-header.component.html
@@ -1,2 +1,2 @@
 <!--component html goes here -->
-<div style="width: 100%; border: 1px solid red">Header</div>
+<div class="container-fluid" style="border: 1px solid red">Header</div>
