--- a/Angular/app/Headers/public-header.component.html
+++ b/Angular/app/Headers/public-header.component.html
@@ -1,2 +1,35 @@
-<!--component html goes here -->
-<div class="container-fluid" style="border: 1px solid red">Header</div>
+<div>
+    <div style="background-color: #000;">
+        <div id="LogoBG"></div>
+    </div>
+</div>
+<div class="call-gskc">
+    <img alt="Call Us at 844.879.4752" src="Images/Call844.png">
+</div>
+<div class="gskc-logo">
+    <img src="/Images/GSKC_Trailer_Side_mist_website_logo.png" />
+</div>
+
+<div class="navbar navbar-inverse" role="navigation">
+    <div class="container" style="padding-left:0; padding-right: 0">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
+        <div class="collapse navbar-collapse">
+            <ul class="nav nav-justified">
+                <li class="active"><a href="/Home/Index">HOME</a></li>
+                <li><a href="#about">SHOP</a></li>
+                <li><a href="/Support/Home/Index">SUPPORT</a></li>
+                <li class="nav-menu-spacer"><a href="#contact">.</a></li>
+                <li><a href="/Contact/Home/Index">CONTACT US</a></li>
+                <li><a href="#contact">SIGN-IN</a></li>
+                <li style="white-space: nowrap"><a href="#contact">VIEW CART</a></li>
+            </ul>
+        </div><!--/.nav-collapse -->
+    </div>
+</div>
