stub out home.component

--- a/Angular/app/Layouts/public-layout.component.html
+++ b/Angular/app/Layouts/public-layout.component.html
@@ -22,7 +22,7 @@
                     <product-search></product-search>
                 </div>
                 <div id="BodyContent" class="col-lg-6 col-md-6 col-sm-9 col-xs-12" style="padding-left: 0; padding-right: 0; background-color: #fff">
-                <!--Content -->
+                    <home></home>
                 </div>
                 <div id="OnTheRoad" class="col-lg-3 col-md-3 col-sm-12 col-xs-12" style="padding-left: 0; padding-right: 0; min-height:100%; background: #F1F1E4; height: 1000px;border-left: 1px dotted #000">
                     <div style="width: 100%; float: left; margin-top: 0;">
