start the process of adding ng2-bootstrap

--- a/Angular/app/Pages/home.component.html
+++ b/Angular/app/Pages/home.component.html
@@ -1,7 +1,10 @@
+<!--<demo-carousel></demo-carousel>-->
+
+
 <div style="width:100%; margin-left: 0; margin-right:0;">
     <div style="position: relative; overflow: hidden; width:100%" class="row no-gutter">
         <div class=" col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <div id="myCarousel" class="carousel slide hidden-xs" style="overflow: hidden" data-ride="carousel">
+            <div id="myCarousel" class="carousel slide hidden-xs" style="overflow: hidden" data-ride="carousel" data-interval="1000">
                 <!-- Indicators -->
                 <ol class="carousel-indicators">
                     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
