attempt to fix ng-boostrap config issue

--- a/Angular/app/Pages/home.component.html
+++ b/Angular/app/Pages/home.component.html
@@ -1,4 +1,4 @@
-<!--<demo-carousel></demo-carousel>-->
+<demo-carousel></demo-carousel>
 
 
 <div style="width:100%; margin-left: 0; margin-right:0;">
