--- a/Angular/app/Pages/home.component.html
+++ b/Angular/app/Pages/home.component.html
@@ -4,43 +4,7 @@
 <div style="width:100%; margin-left: 0; margin-right:0;">
     <div style="position: relative; overflow: hidden; width:100%" class="row no-gutter">
         <div class=" col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <demo-carousel></demo-carousel>
-            <!--<div id="myCarousel" class="carousel slide hidden-xs" style="overflow: hidden" data-ride="carousel" data-interval="1000">-->
-                <!-- Indicators -->
-                <!--<ol class="carousel-indicators">
-                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#myCarousel" data-slide-to="1"></li>
-                    <li data-target="#myCarousel" data-slide-to="2"></li>
-                    <li data-target="#myCarousel" data-slide-to="3"></li>
-                    <li data-target="#myCarousel" data-slide-to="4"></li>
-                    <li data-target="#myCarousel" data-slide-to="5"></li>
-                    <li data-target="#myCarousel" data-slide-to="6"></li>
-                    <li data-target="#myCarousel" data-slide-to="7"></li>
-                </ol>-->
-
-                <!-- Wrapper for slides -->
-                <!--<div class="carousel-inner" role="listbox">
-                    <div class="item active"><img src="/Images/slide-show-image-10.jpg" style="width: 100%" /></div>
-                    <div class="item"><img src="/Images/slide-show-image-8.jpg" style="width: 100%" /></div>
-                    <div class="item"><img src="/Images/slide-show-image-7.jpg" style="width: 100%" /></div>
-                    <div class="item"><img src="/Images/slide-show-image-6.jpg" style="width: 100%" /></div>
-                    <div class="item"><img src="/Images/slide-show-image-5.jpg" style="width: 100%" /></div>
-                    <div class="item"><img src="/Images/slide-show-image-4.jpg" style="width: 100%" /></div>
-                    <div class="item"><img src="/Images/slide-show-image-3.jpg" style="width: 100%" /></div>
-                    <div class="item"><img src="/Images/slide-show-image-2.jpg" style="width: 100%" /></div>
-                </div>-->
-
-                <!-- Left and right controls -->
-                <!--<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>-->
-            
+            <home-carousel></home-carousel>                        
         </div>
         <div class="hidden-xs hidden-sm hidden-md hidden-lg col-lg-3" style="background-color: #fff; position: relative; right:0; border: 0 solid red">
             <div id="DealOfDayProducts" style="width:100%;position: relative;">
