--- a/Angular/styles.css
+++ b/Angular/styles.css
@@ -963,7 +963,7 @@ div#Header {
 
 @media screen and (min-width: 768px) {
     .featured-item-image {
-        width: 100%;
+        width: 120px;
     }
 }
 
