--- a/Angular/app/Pages/home.component.html
+++ b/Angular/app/Pages/home.component.html
@@ -100,7 +100,7 @@
             </div>
         </div>
 
-        <div style="padding: 0; float: left; border-left: 1px dotted #000;" id="FeaturedProducts" class="col-lg-6 col-md-4 col-sm-4 col-xs-12">
+        <div style="padding: 0; float: left;" id="FeaturedProducts" class="col-lg-6 col-md-4 col-sm-4 col-xs-12">
             <div class="section-header-black hidden-xs">
                 <span class="sub-header" style="color:#fff; margin:0">Featured Products</span>
             </div>
