--- a/Angular/Styles/offcanvas.css
+++ b/Angular/Styles/offcanvas.css
@@ -2,18 +2,18 @@
     * Off Canvas
     * --------------------------------------------------
     */
-    @media screen and (max-width: 767px) {
+    /*@media screen and (max-width: 767px) {
        .row-offcanvas { position: relative; -webkit-transition: all 0.25s ease-out; -moz-transition: all 0.25s ease-out; transition: all 0.25s ease-out;  }
 
        .row-offcanvas-right
-       .sidebar-offcanvas { right: -50%; /* 6 columns */ }
+       .sidebar-offcanvas { right: -50%;  }
 
        .row-offcanvas-left
-       .sidebar-offcanvas { left: -50%; /* 6 columns */ }
+       .sidebar-offcanvas { left: -50%;  }
 
-       .row-offcanvas-right.active { right: 50%; /* 6 columns */ }
+       .row-offcanvas-right.active { right: 50%;  }
 
-       .row-offcanvas-left.active { left: 50%; /* 6 columns */ }
+       .row-offcanvas-left.active { left: 50%; / }
 
-       .sidebar-offcanvas { position: absolute; top: 0; width: 50%; /* 6 columns */ }
-    }
+       .sidebar-offcanvas { position: absolute; top: 0; width: 50%; }
+    }*/
