--- a/Angular/Styles/styles.css
+++ b/Angular/Styles/styles.css
@@ -825,7 +825,7 @@ div#Header {
 
     .sidenav {
         position: absolute;
-        top: 149px;
+        /*top: 149px;*/
         height: 0;
         width: 0;
         overflow: hidden;
