--- a/Angular/app/Headers/public-header.component.html
+++ b/Angular/app/Headers/public-header.component.html
@@ -13,7 +13,7 @@
 <div class="navbar navbar-inverse" role="navigation">
     <div class="container" style="padding-left:0; padding-right: 0">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse" (click)="showHideSearch()">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
