--- a/Angular/Styles/bootstrap-overrides.css
+++ b/Angular/Styles/bootstrap-overrides.css
@@ -5378,9 +5378,16 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     background-color: #000;
     border-color: #080808;
     background-image: none;
-    margin-bottom:40px;
     border-radius: 0
 }
+
+    @media screen and (max-width: 768px) {
+        .navbar-inverse {
+            margin-bottom:40px;
+            border-radius: 0
+        }
+    }
+
 
     .navbar-inverse .navbar-brand {
         color: #777;
