--- a/Angular/app/Pages/home.component.html
+++ b/Angular/app/Pages/home.component.html
@@ -4,7 +4,7 @@
 <div style="width:100%; margin-left: 0; margin-right:0;">
     <div style="position: relative; overflow: hidden; width:100%" class="row no-gutter">
         <div class=" col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <home-carousel></home-carousel>                        
+            <home-carousel [imageData]="slideshowImages"></home-carousel>                        
         </div>
         <div class="hidden-xs hidden-sm hidden-md hidden-lg col-lg-3" style="background-color: #fff; position: relative; right:0; border: 0 solid red">
             <div id="DealOfDayProducts" style="width:100%;position: relative;">
