--- a/Angular/app/Layouts/public-layout.component.html
+++ b/Angular/app/Layouts/public-layout.component.html
@@ -29,8 +29,8 @@
                         </div>
 
                         <div style="padding: 10px;text-align: center"><span style="font-weight: bold;">Look for us at the following events:</span></div>
-                        <div style="padding: 10px 10px">
-                            <!--@Html.Action("Index","Home", new {area = "Calendar"})-->
+                        <div style="padding: 10px 10px;height:500px;">
+                            <!--<calendar></calendar>-->
                         </div>
                         <div class="section-header hidden-xs">
                             <span class="sub-header" style="color:#fff; white-space:nowrap">Social Updates</span>
