create google authorization service and rename calendar service...still doesnt work

--- a/Angular/app/Layouts/public-layout.component.html
+++ b/Angular/app/Layouts/public-layout.component.html
@@ -30,7 +30,7 @@
 
                         <div style="padding: 10px;text-align: center"><span style="font-weight: bold;">Look for us at the following events:</span></div>
                         <div style="padding: 10px 10px;height:500px;">
-                            <!--<calendar></calendar>-->
+                            <calendar></calendar>
                         </div>
                         <div class="section-header hidden-xs">
                             <span class="sub-header" style="color:#fff; white-space:nowrap">Social Updates</span>
