refactor calendar service again...works now!

--- a/Angular/app/Layouts/public-layout.component.html
+++ b/Angular/app/Layouts/public-layout.component.html
@@ -29,7 +29,7 @@
                         </div>
 
                         <div style="padding: 10px;text-align: center"><span style="font-weight: bold;">Look for us at the following events:</span></div>
-                        <div style="padding: 10px 10px;height:500px;">
+                        <div style="padding: 10px 10px;">
                             <calendar></calendar>
                         </div>
                         <div class="section-header hidden-xs">
