--- a/Angular/app/Content/home.component.html
+++ b/Angular/app/Content/home.component.html
@@ -41,7 +41,7 @@
             <div style="clear:both"></div>
         </div>
     </div>
-    <div>
+    <div style="padding: 1px;">
         <div style="float:left; padding: 10px; border-right: 0px dotted #000;" class="col-lg-6 col-md-7 col-sm-8 hidden-xs">
 
             <div style="padding-bottom:7px; padding: 0 10px 0 10px;">
