--- a/Angular/app/Headers/public-header.component.html
+++ b/Angular/app/Headers/public-header.component.html
@@ -22,13 +22,13 @@
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav nav-justified">
-                <li class="active"><a href="/Home/Index">HOME</a></li>
-                <li><a href="#about">SHOP</a></li>
-                <li><a href="/Support/Home/Index">SUPPORT</a></li>
-                <li class="nav-menu-spacer"><a href="#contact">.</a></li>
-                <li><a href="/Contact/Home/Index">CONTACT US</a></li>
-                <li><a href="#contact">SIGN-IN</a></li>
-                <li style="white-space: nowrap"><a href="#contact">VIEW CART</a></li>
+                <li class="active"><a routerLink="/home">HOME</a></li>
+                <li><a routerLink="/home">SHOP</a></li>
+                <li><a routerLink="/support">SUPPORT</a></li>
+                <li class="nav-menu-spacer"></li>
+                <li><a routerLink="/contact-us">CONTACT US</a></li>
+                <li><a routerLink="/home">SIGN-IN</a></li>
+                <li style="white-space: nowrap"><a routerLink="/home">VIEW CART</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
