--- a/Angular/app/Headers/public-header.component.html
+++ b/Angular/app/Headers/public-header.component.html
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse">
             <ul class="nav nav-justified">
                 <li class="active"><a routerLink="/home">HOME</a></li>
-                <li><a routerLink="/home">SHOP</a></li>
+                <li><a routerLink="/search">SHOP</a></li>
                 <li><a routerLink="/support">SUPPORT</a></li>
                 <li class="nav-menu-spacer"></li>
                 <li><a routerLink="/contact-us">CONTACT US</a></li>
