--- a/Angular/app/Headers/public-header.component.html
+++ b/Angular/app/Headers/public-header.component.html
@@ -22,13 +22,13 @@
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav nav-justified">
-                <li class="active"><a routerLink="/home">HOME</a></li>
-                <li><a routerLink="/search">SHOP</a></li>
+                <li style="width:1.5%" class="active"><a routerLink="/home">HOME</a></li>
+                <li style="width:1.5%"><a routerLink="/search">SHOP</a></li>
                 <li><a routerLink="/support">SUPPORT</a></li>
                 <li class="nav-menu-spacer"></li>
                 <li><a routerLink="/contact-us">CONTACT US</a></li>
                 <li><a routerLink="/home">SIGN-IN</a></li>
-                <li style="white-space: nowrap"><a routerLink="/home">VIEW CART</a></li>
+                <li style="width:.5%; white-space: nowrap"><a routerLink="/home">VIEW CART</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
